--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,5 +9,9 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= text-decoration: none;
  *= require_tree .
+ *= require font-awesome
  */
+ 
+@import "font-awesome";
