--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -4,17 +4,17 @@
   %li
     = link_to "Users", User
   %li
-    %a(href='#') Dashboard
+    =link_to "Accounts", Account
   %li
     %a(href='#') Overview
   %li
     %a(href='#') Events
   %li
-    %a(href='#') About
+    = link_to("About", about_path)
   %li
     %a(href='#') Services
   %li
-    %a(href='#') Contact
+    = link_to("Contact", contact_path)
   %li
     = link_to "Sign Out", destroy_user_session_path, method: :delete
 
