Re-organized database to begin from a more simple approach and then move on to the more complex

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,7 @@
  *= text-decoration: none;
  *= require_tree .
  *= require font-awesome
+ *= require rails_bootstrap_forms
  */
  
 @import "font-awesome";
