--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -1,1 +1,16 @@
 =content_for :page_title, "#{@account.name} Overview" 
+%col-lg-8
+  %h1= @account.name
+
+  %h3 Payment History
+  %table.table-hover.table.striped
+    %thead
+      %tr
+        %th Date
+        %th Date
+        %th Date
+        %th Date
+    %tbody
+      -@account.payments.each do |payment|
+        %tr
+          %td= payment.payment_date
