--- a/app/assets/stylesheets/sb-admin.css.scss
+++ b/app/assets/stylesheets/sb-admin.css.scss
@@ -232,6 +232,7 @@ body {
 
 .panel .slidedown .glyphicon,
 .chat .glyphicon {
+    padding-top:10px;
     margin-right: 5px;
 }
 
@@ -326,4 +327,7 @@ table.dataTable thead .sorting:after {
 
 .show-grid {
     margin: 15px 0;
+}
+.huge {
+    font-size: 40px;
 }
