--- a/app/views/layouts/_main_nav.html.haml
+++ b/app/views/layouts/_main_nav.html.haml
@@ -5,6 +5,6 @@
       %span.icon-bar
       %span.icon-bar
       %span.icon-bar
-    %a.navbar-brand{href: "index.html"} SB Admin v2.0
+    %a.navbar-brand{href: "index.html"} My Payment Manager
   = render 'layouts/top_nav'
   = render 'layouts/side_nav'
