--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -4,7 +4,7 @@
     = devise_error_messages!
     .form-group
       = f.label :email
-      = f.email_field :email, :autofocus => true, class: 'form-control'
+      = f.email_field :email, class: 'form-control'
     .form-group
       = f.label :password
       = f.password_field :password, class: 'form-control'
