--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -5,7 +5,6 @@
   %tr
     %th Name
     %th Description
-    %th Homepage
     %th Created At
     %th Updated At 
     %th &nbsp
@@ -13,10 +12,13 @@
     %tr
       %td= link_to(account.name, account_path(account))
       %td= account.description
-      %td= link_to(account.homepage, account.homepage)
       %td= account.created_at.strftime("%m/%d/%Y")
       %td= account.updated_at.strftime("%m/%d/%Y")
       %td
+        =link_to(account.homepage) do
+          %button.btn.btn-warning.btn-circle{title: "Go to homepage"}
+            %i.fa.fa-home
+        |
         =link_to(edit_account_path(account)) do
           %button.btn.btn-primary.btn-circle{title: "Edit #{account.name}"}
             %i.fa.fa-list
