Fixed bootstrap datepicker issue. Able to make new payments from an account

--- a/app/views/payments/new.html.haml
+++ b/app/views/payments/new.html.haml
@@ -5,6 +5,5 @@
     -@payment.errors.full_messages.each do |msg|
       %p= msg
   = f.text_field :payment_date, :class => 'datepicker', required: true, label: "Payment Date"
-  = f.text_field :amount
+  = f.number_field :amount, step: '.01'
   = f.primary "Create", data: { disable_with: 'Creating...' }
-  
