Payments can be created with or without an account initially associated with them

--- a/app/views/accounts/new.html.haml
+++ b/app/views/accounts/new.html.haml
@@ -2,7 +2,7 @@
 = bootstrap_form_for @account do |f|
   - unless @account.errors.empty?
     -@account.errors.full_messages.each do |msg|
-      %p= msg
+      %p= msg`
   = f.text_field :name
   = f.text_field :description
   = f.text_field  :homepage
