--- a/app/views/payments/new.html.haml
+++ b/app/views/payments/new.html.haml
@@ -1,9 +1,4 @@
-%h1= "New payment for #{@account.name}"
-
-= bootstrap_form_for [@account,@payment] do |f|
-  - unless @payment.errors.empty?
-    -@payment.errors.full_messages.each do |msg|
-      %p= msg
-  = f.text_field :payment_date, :class => 'datepicker', required: true, label: "Payment Date"
-  = f.number_field :amount, step: '.01'
-  = f.primary "Create", data: { disable_with: 'Creating...' }
+-if @account
+  = render 'payment_form_with_acccount'
+-else
+  = render 'payment_form_without_account'
