Remove partials so as to only have one view, other small fixes

--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -1,6 +1,8 @@
 %h1 Your Accounts
 %h3
-  = link_to("New Account", new_account_path)
+  = link_to "New Account", new_account_path
+  |
+  = link_to "Make a payment", new_payment_path
 %table.table-hover.table.striped
   %tr
     %th Name
