--- a/app/views/payments/new.html.haml
+++ b/app/views/payments/new.html.haml
@@ -1,4 +1,13 @@
--if @account
-  = render 'payment_form_with_acccount'
+- if @account
+  %h1= "New payment for #{@account.name}"
 -else
-  = render 'payment_form_without_account'
+  %h1= "New payment"
+
+= bootstrap_form_for [@ccount,@payment] do |f|
+  - unless @payment.errors.empty?
+    -@payment.errors.full_messages.each do |msg|
+      %p= msg
+  = f.collection_select :account_id, Account.order(:name), :id, :name, { include_blank: true, selected: params["account_id"]}
+  = f.text_field :payment_date, :class => 'datepicker', required: true, label: "Payment Date"
+  = f.number_field :amount, step: '.01'
+  = f.primary "Create", data: { disable_with: 'Creating...' }
