Fixed layout issue with the side menus not sliding down and the top menu dropdowns not working.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,3 +19,6 @@
 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
 @import "bootstrap-sprockets";
 @import "bootstrap-datetimepicker";
+@import "morris-0.4.3.min";
+@import "timeline";
+@import "sb-admin";
