--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,4 @@
 %h3 Home
-- @users.each do |user|
-  %p
-    User: #{link_to user.email, user}
+.bs-callout.bs-callout-info
+  %h4 Dashboard overview
+  %p This will contain a dashboard view of all the payment information including sum for the month, whats left to pay and a history. More like a global view of the accounts for now.
