--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -1,6 +1,7 @@
 =content_for :page_title, "#{@account.name} Overview" 
 %col-lg-8
   %h4="#{@account.name}"
+  = link_to content_tag(:i, "", class: "icon-trash icon-white") + "Delete", @account, method: :delete, class: "btn btn-danger remove_fields", data: { confirm: "Are you sure you want to delete this accont? This action can't be undone." }
   .panel-body
     %ul#accountTabs.nav.nav-tabs
       %li.active
@@ -51,14 +52,13 @@
           .alert.alert-warning.alert-dismissable
             There are no payments recorded for this account.
         -else
-          %table.table.table-hover
+          %table#account-history.table.table-striped.table-bordered.dataTable.no-footer
             %thead
               %tr
                 %th Date
                 %th Amount
             -@account.payments.each do |payment|
-              %tbody
-                %tr
-                  %td= payment.payment_date.strftime('%D')
-                  %td= number_to_currency(payment.amount)
+              %tr
+                %td= payment.payment_date.strftime('%D')
+                %td= number_to_currency(payment.amount)
                   
