change context to describe in some tests

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,7 +5,8 @@
     .bs-callout.bs-callout-info
       %h4 Dashboard overview
       %p This will contain a dashboard view of all the payment information including sum for the month, whats left to pay and a history. More like a global view of the accounts for now.
-    =link_to("/login") do
-      %button.btn.btn-default{title: "Sign In"}
-        Sign In
+    - unless user_signed_in?
+      =link_to("/login") do
+        %button.btn.btn-default{title: "Sign In"}
+          Sign In
 
