--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,8 +5,5 @@
     .bs-callout.bs-callout-info
       %h4 Dashboard overview
       %p This will contain a dashboard view of all the payment information including sum for the month, whats left to pay and a history. More like a global view of the accounts for now.
-    - unless user_signed_in?
-      =link_to("/login") do
-        %button.btn.btn-default{title: "Sign In"}
-          Sign In
+      %p.text-danger Take a look at how Goose integrated the dashboard in the shouter application we made in the intermediate rails.
 
