Added authorization to the index page. Can only see the accounts the user has access to. Added polymorphic notes association for learning purposes.

--- a/app/assets/stylesheets/sb-admin.css.scss
+++ b/app/assets/stylesheets/sb-admin.css.scss
@@ -13,6 +13,11 @@ body {
     }
 }
 
+// link reset 
+a:hover {
+    text-decoration: none;
+}
+
 /* Wrappers */
 
 /* ------------------------------- */
