--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -1,13 +1,14 @@
 %h1 Your Accounts
-%h3
-  = link_to "New Account", new_account_path
-  |
-  = link_to "Make a payment", new_payment_path
+.row
+  .col-lg-6
+    %h3= link_to "New Account", new_account_path
+  .col-lg-6
+    %h3= link_to "Make a payment", new_payment_path
 %table.table-hover.table.striped
   %tr
     %th Name
     %th Description
     %th Created At
-    %th Updated At 
+    %th Updated At over
     %th &nbsp
   = render @accounts
