Provided better tests for integration, authorization and general dom. Finished the notes polymorphic model to work with any model

--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -9,6 +9,6 @@
     %th Name
     %th Description
     %th Created At
-    %th Updated At over
+    %th Updated At
     %th &nbsp
   = render @accounts
