--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -1,8 +1,9 @@
 =content_for :page_title, "#{@account.name} Overview"
 .col-lg-12.add-margin
   %span.h4="#{@account.name}"
-  = link_to content_tag(:i, "", class: "fa fa-trash-o") + " Delete", 
-  @account,method: :delete, 
+  -if current_user.can_delete? @account
+    = link_to content_tag(:i, "", class: "fa fa-trash-o") + " Delete", 
+    @account,method: :delete, 
   class: "btn btn-danger remove_fields btn-xs", 
   data: { confirm: "Are you sure you want to delete this accont? This action can't be undone." }
   .panel-body
