--- a/app/views/accounts/_account_summary.html.haml
+++ b/app/views/accounts/_account_summary.html.haml
@@ -1,34 +1,36 @@
+-can_modify_account = current_user.can_modify?(@account)
 .row
   .col-lg-12
     %h3 Summary
   .row
-  .col-lg-6.col-md-6
-    .panel.panel-primary
-      .panel-heading
-        .row
-          .col-xs-3
-            %i.fa.fa-money.fa-3x
-          .col-xs-9.text-right
-            %div Total Amount Paid
-            .h4=number_to_currency(@account.total_payment_amount)
-      %a#view-history{href: "#"}
-        .panel-footer
-          %span.pull-left View Details
-          %span.pull-right
-            %i.fa.fa-arrow-circle-right
-          .clearfix
-  .col-lg-6.col-md-6
-    .panel.panel-danger
-      .panel-heading
-        .row
-          .col-xs-3
-            %i.fa.fa-calendar.fa-3x
-          .col-xs-9.text-right
-            %div Next Payment
-            .h4=number_to_currency(@account.total_payment_amount) + " on #{Time.now.strftime('%D') }"
-      %a{href: new_account_payment_path(@account)}
-        .panel-footer
-          %span.pull-left Make a payment
-          %span.pull-right
-            %i.fa.fa-arrow-circle-right
-          .clearfix
+    %div{ class: ( can_modify_account ? "col-lg-6 col-md-6" : "col-lg-12 col-md-12" )}
+      .panel.panel-primary#summary
+        .panel-heading
+          .row
+            .col-xs-3
+              %i.fa.fa-money.fa-3x
+            .col-xs-9.text-right
+              %div Total Amount Paid
+              .h4=number_to_currency(@account.total_payment_amount)
+        %a#view-history{href: "#"}
+          .panel-footer
+            %span.pull-left View Details
+            %span.pull-right
+              %i.fa.fa-arrow-circle-right
+            .clearfix
+    -if can_modify_account
+      .col-lg-6.col-md-6
+        .panel.panel-danger#payments
+          .panel-heading
+            .row
+              .col-xs-3
+                %i.fa.fa-calendar.fa-3x
+              .col-xs-9.text-right
+                %div Next Payment
+                .h4=number_to_currency(@account.total_payment_amount) + " on #{Time.now.strftime('%D') }"
+          %a{href: new_account_payment_path(@account)}
+            .panel-footer
+              %span.pull-left Make a payment
+              %span.pull-right
+                %i.fa.fa-arrow-circle-right
+              .clearfix
