--- a/app/views/accounts/_account_history.html.haml
+++ b/app/views/accounts/_account_history.html.haml
@@ -3,12 +3,13 @@
   .alert.alert-warning.alert-dismissable
     There are no payments recorded for this account.
 -else
-  %table#account-history.table.table-striped.table-bordered.dataTable.no-footer
-    %thead
-      %tr
-        %th Date
-        %th Amount
-    -@account.payments.each do |payment|
-      %tr
-        %td= payment.payment_date.strftime('%D')
-        %td= number_to_currency(payment.amount)
+  .table-responsive
+    %table#account-history.table.table-striped.table-bordered.dataTable.no-footer
+      %thead
+        %tr
+          %th Date
+          %th Amount
+      -@account.payments.each do |payment|
+        %tr
+          %td= payment.payment_date.strftime('%D')
+          %td= number_to_currency(payment.amount)
