--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -4,11 +4,12 @@
     %h3= link_to "New Account", new_account_path
   .col-lg-6
     %h3= link_to "Make a payment", new_payment_path
-%table.table-hover.table.striped
-  %tr
-    %th Name
-    %th Description
-    %th Created At
-    %th Updated At
-    %th &nbsp
-  = render @accounts
+.table-responsive
+  %table.table-hover.table.striped
+    %tr
+      %th Name
+      %th Description
+      %th Created At
+      %th Updated At
+      %th &nbsp
+    = render @accounts
