--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -1,11 +1,17 @@
 =content_for :page_title, "#{@account.name} Overview"
 .col-lg-12.add-margin
-  %span.h4="#{@account.name}"
-  -if current_user.can_delete? @account
+  %h2="#{@account.name}"
+  -if current_user.owns_account? @account
+    = link_to content_tag(:i, "", class: "fa fa-pencil-square-o") + " Edit", edit_account_path(@account),
+    class: "btn btn-info remove_fields btn-xs "
     = link_to content_tag(:i, "", class: "fa fa-trash-o") + " Delete", 
     @account,method: :delete, 
-  class: "btn btn-danger remove_fields btn-xs", 
-  data: { confirm: "Are you sure you want to delete this accont? This action can't be undone." }
+    class: "btn btn-danger remove_fields btn-xs", 
+    data: { confirm: "Are you sure you want to delete this accont? This action can't be undone." }
+    = link_to content_tag(:i, "", class: "fa fa-chevron-left") + " Back", accounts_path,
+    class: "btn btn-default remove_fields btn-xs "
+    = link_to content_tag(:i, "", class: "fa fa-lock") + " Manage Security", account_security_path(@account),
+    class: "btn btn-warning remove_fields btn-xs pull-right"
   .panel-body
     %ul#accountTabs.nav.nav-tabs
       %li.active
