--- a/app/views/accounts_users/_accounts_user.html.haml
+++ b/app/views/accounts_users/_accounts_user.html.haml
@@ -1,3 +1,4 @@
-%li.list-group-item#role{id: accounts_user.id }
+%li.list-group-item#role{id: accounts_user.id}
   = accounts_user.user.name
-  = button_to('Delete', accounts_user_path(accounts_user), method: :delete, class: "pull-right", remote: true)
+  %span.pull-right
+    = button_to('Delete', accounts_user_path(accounts_user), method: :delete, class: "btn btn-danger btn-xs", remote: true)
