--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
     %meta{:name => "description", :content => "#{content_for?(:description) ? yield(:description) : 'My Payment Manager'}"}
     = stylesheet_link_tag "application", media: "all"
     = javascript_include_tag "application"
+    = javascript_include_tag "http://code.highcharts.com/highcharts.js", "chartkick"
     = csrf_meta_tags
   %body{ class: "#{controller_name} #{action_name}" }
   #wrapper
