--- a/app/views/layouts/_side_nav.html.haml
+++ b/app/views/layouts/_side_nav.html.haml
@@ -9,7 +9,7 @@
               %i.fa.fa-search
         / /input-group
       %li
-        %a{href: "index.html"}
+        = link_to dashboard_path do
           %i.fa.fa-dashboard.fa-fw
           Dashboard
       %li
