--- a/app/views/accounts/_account_summary.html.haml
+++ b/app/views/accounts/_account_summary.html.haml
@@ -2,6 +2,8 @@
 .row
   .col-lg-12
     %h3 Summary
+    -unless @account.schedule.empty?
+      .alert.bg-info Note: This account has automatic payment creation set up ( #{@account.converted_schedule.to_s} )
   .row
     %div{ class: ( can_modify_account ? "col-lg-6 col-md-6" : "col-lg-12 col-md-12" )}
       .panel.panel-primary#summary
@@ -36,5 +38,9 @@
               .clearfix
 .row
   .col-lg-12
-    =column_chart(@account.payments.group_by_month(:payment_date, format: "%F").sum(:amount), library: { tooltip: { pointFormat: 'Amount: <b>${point.y}</b>' }} )
+    =column_chart(@account.payments.group_by_month(:payment_date, format: "%F").sum(:amount),
+    library: { tooltip: { pointFormat: 'Amount: <b>${point.y:,.2f}</b>'},
+    lang: { thousandsSep: ','},
+    title: { text: 'Monthly Summary',
+             align: 'left'  } })
           
