--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -20,7 +20,7 @@
       %li
         %a{href: "#history", data: {toggle: "tab"} }
           History
-      %li.pull-right
+      %li#notes-tab.pull-right
         %a{ href: "#account-notes", data: {toggle: "tab"} }
           Notes
           %span.badge#notes-count= @account.notes.count
