--- a/app/views/notes/_notes_and_form.html.haml
+++ b/app/views/notes/_notes_and_form.html.haml
@@ -13,4 +13,4 @@
 %hr
 
 %ul.list-group#notes
-  = render Note.where(noteable_type: current_model.class.to_s) #current_model.notes creates an empty partial (gotta figure it out)
+  = render Note.where(noteable_type: current_model.class.to_s, noteable_id: current_model.id) #TODO: current_model.notes creates an empty partial (gotta figure it out)
