--- a/app/views/accounts/_account_form.html.haml
+++ b/app/views/accounts/_account_form.html.haml
@@ -10,6 +10,7 @@
       [IceCube::Rule.monthly.day_of_month(1),
       IceCube::Rule.monthly.day_of_month([1,15])],
       allow_blank: true
+  = f.number_field  :payment_amount, value: number_with_precision(f.object.payment_amount, precision: 2), step: 'any'
   -if @account.new_record?
     = f.primary "Create", data: { disable_with: 'Creating...' }
   -else
