--- a/app/views/accounts/_account_summary.html.haml
+++ b/app/views/accounts/_account_summary.html.haml
@@ -28,8 +28,9 @@
               .col-xs-3
                 %i.fa.fa-calendar.fa-3x
               .col-xs-9.text-right
-                %div Next Payment
-                .h4=number_to_currency(@account.total_payment_amount) + " on #{Time.now.strftime('%D') }"
+                -unless @account.schedule.empty?
+                  %div Next Payment
+                  .h4=number_to_currency(@account.payment_amount) + " on #{@account.converted_schedule.next_occurrence.to_date.strftime('%m/%d/%Y') }"
           %a{href: new_account_payment_path(@account)}
             .panel-footer
               %span.pull-left Make a payment
