--- a/app/views/accounts/_account_form.html.haml
+++ b/app/views/accounts/_account_form.html.haml
@@ -1,6 +1,5 @@
 = bootstrap_form_for @account do |f|
-  - unless @account.errors.empty?
-    = render partial: "/layouts/error_messages", locals: { error_model: @account }
+  = error_messages_for @account
   = f.text_field :name
   = f.text_field :description
   = f.text_field  :homepage
@@ -10,7 +9,7 @@
       [IceCube::Rule.monthly.day_of_month(1),
       IceCube::Rule.monthly.day_of_month([1,15])],
       allow_blank: true
-  = f.number_field  :payment_amount, value: number_with_precision(f.object.payment_amount, precision: 2), step: 'any'
+  = f.number_field  :payment_amount, value: number_with_precision(f.object.payment_amount, precision: 2), step: 'any', prepend: "$"
   -if @account.new_record?
     = f.primary "Create", data: { disable_with: 'Creating...' }
   -else
