--- a/app/views/dashboards/show.html.haml
+++ b/app/views/dashboards/show.html.haml
@@ -5,8 +5,13 @@
 .row
   .col-lg-12
     %h2= "Account summary for the month of #{Date::MONTHNAMES[Time.now.month]}"
-    =column_chart(@dashboard.payment_sum_for_user_by_month, library: { tooltip: { pointFormat: 'Amount: <b>${point.y}</b>' }} )
+    =column_chart(@dashboard.payment_sum_for_user_by_month, 
+    library: { tooltip: { pointFormat: 'Amount: <b>${point.y}</b>' },
+    yAxis: { labels: { format: '${value}' }}} )
+
 .row
   .col-lg-12
     %h2= "Account summary for the year #{Time.now.year}"
-    =column_chart(@dashboard.payment_sum_for_user_by_year, library: { tooltip: { pointFormat: 'Amount: <b>${point.y}</b>' }} )
+    =column_chart(@dashboard.payment_sum_for_user_by_year, 
+    library: { tooltip: { pointFormat: 'Amount: <b>${point.y:,.2f}</b>' },
+    yAxis: { labels: { format: '${value}' }}} )
