--- a/app/views/payments/new.html.haml
+++ b/app/views/payments/new.html.haml
@@ -1,11 +1,9 @@
 %h1= "New payment"
 = bootstrap_form_for [@ccount,@payment] do |f|
-  - unless @payment.errors.empty?
-    -@payment.errors.full_messages.each do |msg|
-      %p= msg
+  = error_messages_for @payment
   = f.collection_select :account_id, current_user.editable_accounts, :id, :name, { include_blank: true, selected: params["account_id"]}
   = f.text_field :payment_date, :class => 'datepicker', required: true, label: "Payment Date", value: "#{ params[:payment][:payment_date] unless params[:payment].nil? }"
-  = f.number_field :amount, step: '.01'
+  = f.number_field :amount, step: 'any', prepend: "$"
   = f.primary "Create", data: { disable_with: 'Creating...' }
 
 =debug(params)
