Added rake to create recurring payments. Refactored payments form into a partial. Added edit capabilities to payment

--- a/app/views/accounts/_account_history.html.haml
+++ b/app/views/accounts/_account_history.html.haml
@@ -9,7 +9,9 @@
         %tr
           %th Date
           %th Amount
+          %td Edit
       -@account.paid_payments.each do |payment|
         %tr
           %td= payment.payment_date.strftime('%D')
           %td= number_to_currency(payment.amount)
+          %td= link_to("Go", edit_account_payment_path(@account, payment))
