--- a/app/views/payments/new.html.haml
+++ b/app/views/payments/new.html.haml
@@ -1,9 +1,4 @@
 %h1= "New payment"
-= bootstrap_form_for [@ccount,@payment] do |f|
-  = error_messages_for @payment
-  = f.collection_select :account_id, current_user.editable_accounts, :id, :name, { include_blank: true, selected: params["account_id"]}
-  = f.text_field :payment_date, :class => 'datepicker', required: true, label: "Payment Date", value: "#{ params[:payment][:payment_date] unless params[:payment].nil? }"
-  = f.number_field :amount, step: 'any', prepend: "$"
-  = f.primary "Create", data: { disable_with: 'Creating...' }
+= render 'payment_form'
 
 =debug(params)
